[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa-ground-color-map"
version = "0.1.0"
description = "API that samples NASA GIBS daily satellite imagery and returns ground-color data for lat/lon bounding boxes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pillow>=10.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "python-multipart>=0.0.9",
    "defusedxml>=0.7",
    "aiosqlite>=0.20",
    "mapbox-vector-tile>=2.0",
]

[project.scripts]
ground-color = "nasa_ground_color_map.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nasa_ground_color_map = ["environment/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
